added 2 react projects

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <!--css versioning using js random number-->
     <link rel="stylesheet" href="main/main-style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
@@ -54,6 +53,22 @@
                 target="_blank"
                 href="https://xanoosh.github.io/portfolio/recipe-api"
                 >What's in my fridge app</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                target="_blank"
+                href="http://ip-geolocation-app.herokuapp.com/"
+                >Geolocation App</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                target="_blank"
+                href="https://tic-tac-toe-redux.herokuapp.com/"
+                >Tic Tac Toe</a
               >
             </li>
             <li class="nav-item">
@@ -165,6 +180,77 @@
                   </div>
                 </div>
               </div>
+                <!--new start-->
+                <div class="col-lg-4 col-sm-6 mb-4">
+                  <div class="card" data-aos="fade-up">
+                    <div class="card-body">
+                      <h5 class="card-title">Geolocation App</h5>
+                      <div class="mb-3">
+                        <span class="tag">REACT</span>
+                        <span class="tag">NODE</span>
+                        <span class="tag">REST API</span>
+                        <span class="tag">SASS</span>
+                        <span class="tag">ES6</span>
+                        <span class="tag">HTML</span>
+                      </div>
+                      <p class="card-text">
+                        App hosted on heroku.
+                        Provides user location by IP and displays IP and map on load.
+                        Search bar allows to find different locations by ip/url.
+                        Search history is stored during a session.
+                      </p>
+                      <div class="btn-container">
+                        <a
+                          target="_blank"
+                          href="http://ip-geolocation-app.herokuapp.com/"
+                          class="btn btn-primary"
+                          >App</a
+                        >
+                        <a
+                        target="_blank"
+                        href="https://github.com/xanoosh/geolocation_app"
+                        class="btn btn-primary"
+                        >Code</a
+                      >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                  <div class="card" data-aos="fade-up">
+                    <div class="card-body">
+                      <h5 class="card-title">Tic Tac Toe</h5>
+                      <div class="mb-3">
+                        <span class="tag">REACT</span>
+                        <span class="tag">REDUX</span>
+                        <span class="tag">NODE</span>
+                        <span class="tag">REST API</span>
+                        <span class="tag">SASS</span>
+                        <span class="tag">ES6</span>
+                        <span class="tag">HTML</span>
+                      </div>
+                      <p class="card-text">
+                       Tic tac toe game created in React, deployed on heroku.
+                       Some states implemented using redux store.
+                      </p>
+                      <div class="btn-container">
+                        <a
+                          target="_blank"
+                          href="https://tic-tac-toe-redux.herokuapp.com/"
+                          class="btn btn-primary"
+                          >App</a
+                        >
+                        <a
+                        target="_blank"
+                        href="https://github.com/xanoosh/tic-tac-toe-redux"
+                        class="btn btn-primary"
+                        >Code</a
+                      >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- new end -->
               <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
@@ -199,35 +285,12 @@
                       <span class="tag">CSS</span>
                     </div>
                     <p class="card-text">
-                      Just a memory game with different colors.
+                      Simple memory game with different colors.
                     </p>
                     <div class="btn-container">
                       <a
                         target="_blank"
                         href="https://xanoosh.github.io/portfolio/memo"
-                        class="btn btn-primary"
-                        >Link</a
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-sm-6 mb-4">
-                <div class="card" data-aos="fade-up">
-                  <div class="card-body">
-                    <h5 class="card-title">Dice Game</h5>
-                    <div class="mb-3">
-                      <span class="tag">ES6</span>
-                      <span class="tag">HTML</span>
-                      <span class="tag">CSS</span>
-                    </div>
-                    <p class="card-text">
-                      Simple dice game designed for 2 players.
-                    </p>
-                    <div class="btn-container">
-                      <a
-                        target="_blank"
-                        href="https://xanoosh.github.io/portfolio/dice"
                         class="btn btn-primary"
                         >Link</a
                       >
@@ -253,6 +316,29 @@
                       <a
                         target="_blank"
                         href="https://xanoosh.github.io/portfolio/snake/"
+                        class="btn btn-primary"
+                        >Link</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-6 mb-4">
+                <div class="card" data-aos="fade-up">
+                  <div class="card-body">
+                    <h5 class="card-title">Dice Game</h5>
+                    <div class="mb-3">
+                      <span class="tag">ES6</span>
+                      <span class="tag">HTML</span>
+                      <span class="tag">CSS</span>
+                    </div>
+                    <p class="card-text">
+                      Simple dice game designed for 2 players.
+                    </p>
+                    <div class="btn-container">
+                      <a
+                        target="_blank"
+                        href="https://xanoosh.github.io/portfolio/dice"
                         class="btn btn-primary"
                         >Link</a
                       >
