changed media query on  mainmenu

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container py-2 justify-content-lg-start justify-content-end">
+    <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
+      <div class="container py-2 justify-content-xl-start justify-content-end">
         <button
           class="navbar-toggler"
           type="button"
@@ -180,77 +180,77 @@
                   </div>
                 </div>
               </div>
-                <!--new start-->
-                <div class="col-lg-4 col-sm-6 mb-4">
-                  <div class="card" data-aos="fade-up">
-                    <div class="card-body">
-                      <h5 class="card-title">Geolocation App</h5>
-                      <div class="mb-3">
-                        <span class="tag">REACT</span>
-                        <span class="tag">NODE</span>
-                        <span class="tag">REST API</span>
-                        <span class="tag">SASS</span>
-                        <span class="tag">ES6</span>
-                        <span class="tag">HTML</span>
-                      </div>
-                      <p class="card-text">
-                        App hosted on heroku.
-                        Provides user location by IP and displays IP and map on load.
-                        Search bar allows to find different locations by ip/url.
-                        Search history is stored during a session.
-                      </p>
-                      <div class="btn-container">
-                        <a
-                          target="_blank"
-                          href="http://ip-geolocation-app.herokuapp.com/"
-                          class="btn btn-primary"
-                          >App</a
-                        >
-                        <a
+              <!--new start-->
+              <div class="col-lg-4 col-sm-6 mb-4">
+                <div class="card" data-aos="fade-up">
+                  <div class="card-body">
+                    <h5 class="card-title">Geolocation App</h5>
+                    <div class="mb-3">
+                      <span class="tag">REACT</span>
+                      <span class="tag">NODE</span>
+                      <span class="tag">REST API</span>
+                      <span class="tag">SASS</span>
+                      <span class="tag">ES6</span>
+                      <span class="tag">HTML</span>
+                    </div>
+                    <p class="card-text">
+                      App hosted on heroku. Provides user location by IP and
+                      displays IP and map on load. Search bar allows to find
+                      different locations by ip/url. Search history is stored
+                      during a session.
+                    </p>
+                    <div class="btn-container">
+                      <a
+                        target="_blank"
+                        href="http://ip-geolocation-app.herokuapp.com/"
+                        class="btn btn-primary"
+                        >App</a
+                      >
+                      <a
                         target="_blank"
                         href="https://github.com/xanoosh/geolocation_app"
                         class="btn btn-primary"
                         >Code</a
                       >
-                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 mb-4">
-                  <div class="card" data-aos="fade-up">
-                    <div class="card-body">
-                      <h5 class="card-title">Tic Tac Toe</h5>
-                      <div class="mb-3">
-                        <span class="tag">REACT</span>
-                        <span class="tag">REDUX</span>
-                        <span class="tag">NODE</span>
-                        <span class="tag">REST API</span>
-                        <span class="tag">SASS</span>
-                        <span class="tag">ES6</span>
-                        <span class="tag">HTML</span>
-                      </div>
-                      <p class="card-text">
-                       Tic tac toe game created in React, deployed on heroku.
-                       Some states implemented using redux store.
-                      </p>
-                      <div class="btn-container">
-                        <a
-                          target="_blank"
-                          href="https://tic-tac-toe-redux.herokuapp.com/"
-                          class="btn btn-primary"
-                          >App</a
-                        >
-                        <a
+              </div>
+              <div class="col-lg-4 col-sm-6 mb-4">
+                <div class="card" data-aos="fade-up">
+                  <div class="card-body">
+                    <h5 class="card-title">Tic Tac Toe</h5>
+                    <div class="mb-3">
+                      <span class="tag">REACT</span>
+                      <span class="tag">REDUX</span>
+                      <span class="tag">NODE</span>
+                      <span class="tag">REST API</span>
+                      <span class="tag">SASS</span>
+                      <span class="tag">ES6</span>
+                      <span class="tag">HTML</span>
+                    </div>
+                    <p class="card-text">
+                      Tic tac toe game created in React, deployed on heroku.
+                      Some states implemented using redux store.
+                    </p>
+                    <div class="btn-container">
+                      <a
+                        target="_blank"
+                        href="https://tic-tac-toe-redux.herokuapp.com/"
+                        class="btn btn-primary"
+                        >App</a
+                      >
+                      <a
                         target="_blank"
                         href="https://github.com/xanoosh/tic-tac-toe-redux"
                         class="btn btn-primary"
                         >Code</a
                       >
-                      </div>
                     </div>
                   </div>
                 </div>
-                <!-- new end -->
+              </div>
+              <!-- new end -->
               <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
