added react native app link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 class="nav-link"
                 target="_blank"
                 href="https://xanoosh.github.io/portfolio/poker-probability"
-                >Texas Holdem Calculator</a
+                >Poker Calculator</a
               >
             </li>
             <li class="nav-item">
@@ -63,6 +63,14 @@
                 >Geolocation App</a
               >
             </li>
+            <!-- <li class="nav-item">
+              <a
+                class="nav-link"
+                target="_blank"
+                href="https://github.com/xanoosh/terraforming-calculator-react-native"
+                >Terraforming Calculator</a
+              >
+            </li> -->
             <li class="nav-item">
               <a
                 class="nav-link"
@@ -209,6 +217,39 @@
                       <a
                         target="_blank"
                         href="https://github.com/xanoosh/geolocation_app"
+                        class="btn btn-primary"
+                        >Code</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-6 mb-4">
+                <div class="card" data-aos="fade-up">
+                  <div class="card-body">
+                    <h5 class="card-title">Terraforming calculator</h5>
+                    <div class="mb-3">
+                      <span class="tag">REACT NATIVE</span>
+                      <span class="tag">ASYNC STORAGE</span>
+                      <span class="tag">EXPO</span>
+                      <span class="tag">NODE</span>
+                      <span class="tag">ES6</span>
+                    </div>
+                    <p class="card-text">
+                      Simple app created in React Native with Expo. </br>
+                      It was created to calculate resources in a board game, stores data locally. 
+                      Build can be deployed to Android and IOS.
+                    </p>
+                    <div class="btn-container justify-content-end">
+                      <!-- <a
+                        target="_blank"
+                        href=""
+                        class="btn btn-primary"
+                        >App</a
+                      > -->
+                      <a
+                        target="_blank"
+                        href="https://github.com/xanoosh/terraforming-calculator-react-native"
                         class="btn btn-primary"
                         >Code</a
                       >
