new menu element - vite stat checker

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
               <a
                 class="nav-link"
                 target="_blank"
+                href="https://xanoosh.github.io/portfolio/map-generator"
+                >Stat Calculator</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                target="_blank"
                 href="https://xanoosh.github.io/portfolio/quiz-api"
                 >Quiz</a
               >
@@ -63,14 +71,6 @@
                 >Geolocation App</a
               >
             </li>
-            <!-- <li class="nav-item">
-              <a
-                class="nav-link"
-                target="_blank"
-                href="https://github.com/xanoosh/terraforming-calculator-react-native"
-                >Terraforming Calculator</a
-              >
-            </li> -->
             <li class="nav-item">
               <a
                 class="nav-link"
@@ -111,14 +111,6 @@
                 >TimeZones</a
               >
             </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                target="_blank"
-                href="https://xanoosh.github.io/portfolio/map-generator"
-                >Map Generator</a
-              >
-            </li>
           </ul>
         </div>
       </div>
@@ -138,6 +130,42 @@
           <div class="col-12 mb-5">
             <div class="row">
               <!-- some cards start -->
+              <div class="col-lg-4 col-sm-6 mb-4">
+                <div class="card" data-aos="fade-up">
+                  <div class="card-body">
+                    <h5 class="card-title">Pokemon stat calculator</h5>
+                    <div class="mb-3">
+                      <span class="tag">Vite</span>
+                      <span class="tag">REACT</span>
+                      <span class="tag">Fuse</span>
+                      <span class="tag">Headless</span>
+                      <span class="tag">Local storage</span>
+                      <span class="tag">REST API</span>
+                      <span class="tag">ES6</span>
+                      <span class="tag">HTML</span>
+                      <span class="tag">CSS</span>
+                    </div>
+                    <p class="card-text">
+                      React app for fuzzy searching pokemon (Fuse.js integration) and calculating their stats based on formula and received data. 
+                      Deployed on Vercel.
+                    </p>
+                    <div class="btn-container">
+                      <a
+                        href="https://vite-stat-checker.vercel.app/"
+                        target="_blank"
+                        class="btn btn-primary"
+                        >App</a
+                      >
+                      <a
+                      target="_blank"
+                      href="https://github.com/xanoosh/vite-stat-checker"
+                      class="btn btn-primary"
+                      >Code</a
+                    >
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
